Java 25 + dependency updates
Also fixed compiler warnings