@@ -5,7 +5,7 @@ TITLE Aion Emu - Login Server
 
 :START
 CLS
-JAVA -Xms48m -Xmx48m -XX:+UseNUMA -DconsoleEncoding=CP850 -cp "libs/*" com.aionemu.loginserver.LoginServer
+JAVA -Xms48m -Xmx48m -XX:+UseNUMA -XX:+UseCompactObjectHeaders -DconsoleEncoding=CP850 -cp "libs/*" com.aionemu.loginserver.LoginServer
 IF %ERRORLEVEL% EQU 0 GOTO END
 IF %ERRORLEVEL% EQU 2 GOTO START
 ECHO.
